syntax = "proto3";
package pb;
//import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";
import "game_code.proto";

//代理操作

//申请加入数据同步
message AgentJoin {
    string agentname = 1;//名字
    string agentid = 2;//代理id
    string realname = 3;//真实姓名
    string weixin = 4;//微信
    uint32 level = 5;//
    string time = 6;//
    string userid = 7;//
}

message AgentJoined
{
    ErrCode error = 1 ;// 错误码
}

//审批
message AgentPlayerApprove {
    AgentApproveState state = 1;//1同意，2拒绝
    string userid = 2;//申请玩家id
    string selfid = 3;//审批玩家id
}

//代理收益信息
message AgentProfitInfo {
    int32 gtype = 1;//game type
    string agentid = 2;//代理id
    uint32 rate = 3;//分佣比例
    uint32 level = 4;//等级
    bool agent = 5;//是否是代理反佣
    int64 profit = 6;//收益
}